--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ Flask==3.0.2
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+mysql-connector-python==8.3.0
 python-decouple==3.8
 Werkzeug==3.0.1
